--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Global Styles */
 :root {
-    --bg-color: #bfbfbf;
+    --bg-color: #595959;
     --text-color: #e0e0e0;
     --accent-color: #bb86fc;
     --secondary-color: #03dac6;
